--- a/soft.md.html
+++ b/soft.md.html
@@ -66,6 +66,41 @@ Gimp
 ## 市松模様(checker)を作る
 [フィルター] -> [下塗り] -> [パターン] -> [市松模様]
 
+<meta name="keywords" content="*memo_soft.unity*">
+Unity
+=======================================================
+- Left-handed coordinate system
+- X-left
+- Y-up
+- Z-front
+- Matrix
+    - Column order memory
+- [Unity matrix](http://edom18.hateblo.jp/entry/2019/01/04/153205)
+
+![unity](images/model_unity.jpg)
+
+<meta name="keywords" content="*memo_soft.meshlab*">
+MeshLab
+=======================================================
+- Right-handed coordinate system
+- X-right
+- Y-up
+- Z-front
+
+![meshlab](images/model_meshlab.jpg)
+
+## UV表示
+- Render > Show UV Tex Param
+
+## 法線表示
+- Render > Show Normal
+
+## Bounding Boxの情報表示
+- Render > Show Box Corners
+
+## 法線をそろえる
+- Filters > Normals, ... > Re-Orient all faces coherently
+
 <meta name="keywords" content="*memo_soft.freecad*">
 FreeCAD
 =======================================================
