--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <a href="git.md.html"     id ="toc_item" target="main">Git</a>
 <a href="cpp.md.html"     id ="toc_item" target="main">C++</a>
 <a href="python.md.html"  id ="toc_item" target="main">Python</a>
+<a href="lang.md.html"    id ="toc_item" target="main">Lang</a>
 <a href="blender.md.html" id ="toc_item" target="main">Blender</a>
 <a href="soft.md.html"    id ="toc_item" target="main">Soft</a>
 <a href="stock.md.html"   id ="toc_item" target="main">Stock</a>
