--- a/python.md.html
+++ b/python.md.html
@@ -53,6 +53,7 @@ pip uninstall {pkg}              | uninstall package
 python -m pip install --upgrade pip
 ~~~
 
+<meta name="keywords" content="*memo_prog.python.pip.freeze*">
 ### list / install requrired packages
 ~~~
 pip freeze > requirements.txt
@@ -62,6 +63,7 @@ pip install -r requirements.txt
 <meta name="keywords" content="*memo_prog.python.syntax*">
 ## syntax
 
+<meta name="keywords" content="*memo_prog.python.syntax.main*">
 ### main
 ~~~
 #!/usr/bin/env python
@@ -82,6 +84,7 @@ if __name__ == "__main__":
 >>> sys.path
 ~~~
 
+<meta name="keywords" content="*memo_prog.python.syntax.import*">
 ### import
 ~~~
 import <modeule>
