--- a/python.md.html
+++ b/python.md.html
@@ -63,6 +63,14 @@ pip install -r requirements.txt
 <meta name="keywords" content="*memo_prog.python.syntax*">
 ## syntax
 
+<meta name="keywords" content="*memo_prog.python.syntax.string*">
+### string
+~~~
+>>> a = 'hello'
+>>> print(a[1:3])
+el
+~~~
+
 <meta name="keywords" content="*memo_prog.python.syntax.main*">
 ### main
 ~~~
