--- a/vim.md.html
+++ b/vim.md.html
@@ -55,6 +55,14 @@ vnoremap A y:!cmd "<C-R>""<CR>
 <meta name="keywords" content="*memo_vim.script.syntax*">
 ## syntax
 
+<meta name="keywords" content="*memo_vim.script.syntax.string*">
+### string
+~~~
+:let a = 'hello'
+:echo a[1:3]
+ell
+~~~
+
 <meta name="keywords" content="*memo_vim.script.syntax.expr*">
 ### expr
 expr           | Description
