--- a/lang.md.html
+++ b/lang.md.html
@@ -1,8 +1,68 @@
-<meta vim:set syntax=markdown:>
+<meta vim:set syntax=markdown nowrap:>
 <meta charset="utf-8">
 <link rel="stylesheet" href="default.css">
+<style type="text/css">
+<!--
+body {
+    width: 95%;
+    max-width: 95%;
+}
+-->
+</style>
 
 **Lang**
+
+<meta name="keywords" content="*memo_lang.compare*">
+言語syntax比較
+=============================================
+|         | C++                                                  | Python               | Vim               | Bash                |
+| ---     | ---                                                  | ---                  | ---               | ---                 |
+| int     | int x = 1;                                           | x = 1                | let x = 1         | x=1                 |
+| float   | float x = 1.0f;                                      | x = 1.0              |                   |                     |
+| print   | std::cout << x << std::endl;                         | print(f'{x}')        | echom x           | echo $x             |
+| list    | std::list<int> l = {0, 1, 2};                        | l = [0, 1, 2]        | let l = [0, 1, 2] |                     |
+|         |                                                      | l[0:3]               | l[0:2]            |                     |
+| tuple   |                                                      | t = (0, 1, 2)        |                   |                     |
+| dict    | std::map`<`std::string, int`>` m = {"a": 0, "b": 1}; | d = {'a': 0, 'b': 1} |                   |                     |
+| string  | std::string s = "hello"                              | s = "hello"          | let s = "hello"   | s="hello"           |
+| null    | nullptr                                              | None                 |                   |                     |
+| true    | true                                                 | True                 | v:true            | true                |
+| false   | false                                                | False                | v:false           | false               |
+| and     | &&                                                   | and                  | &&                | -a                  |
+| or      | `||`                                                 | or                   | `||`              | -o                  |
+| if      | if (expr) {                                          | if expr:             | if expr           | if [ expr ]; then   |
+|         | } else if (expr) {                                   | elif expr:           | elseif expr       | elif [ expr ]; then |
+|         | } else {                                             | else:                | else              | else                |
+|         | }                                                    |                      | endif             | fi                  |
+| for     | for (auto&& i : list) {                              | for i in list:       | for i in list     | for i in list; do   |
+|         | }                                                    |                      | endfor            | done                |
+| func    | void func() {                                        | def func():          | func Func()       | func() {            |
+|         | }                                                    |                      | endfunc           | }                   |
+| heredoc | s = R"(                                              | s = '''              |                   | cat << END          |
+|         | )"                                                   | '''                  |                   | END                 |
+
+<meta name="keywords" content="*memo_lang.compare_lib*">
+ライブラリsyntax比較
+=============================================
+|                  | math | glsl | Eigen | glm | numpy |
+| ---              | ---  | ---  | ---   | --- | ---   |
+| matrix product   |      |      |       |     | @     |
+| Hadamard product |      |      |       |     | *     |
+| power            | pow  | pow  |       |     | power |
+
+
+- [note.nkmk.me: Python, NumPyで行列の演算（逆行列、行列式、固有値など）](https://note.nkmk.me/python-numpy-matrix/)
+
+
+<meta name="keywords" content="*memo_lang.markdeep*">
+Markdeep
+=============================================
+
+## special character
+|            | symbol |
+| ---        | ---    |
+| back quote | ```    |
+| bar        | `|`    |
 
 <meta name="keywords" content="*memo_lang.html*">
 HTML
