--- a/memo.md.html
+++ b/memo.md.html
@@ -1,7 +1,7 @@
 <meta vim:set syntax=markdown:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="default.css">
-<link rel="stylesheet" href="util.css">
+<link rel="stylesheet" href="inc/default.css">
+<link rel="stylesheet" href="inc/util.css">
 
 **Memo**
 
@@ -17,7 +17,7 @@
 </div>
 
 <style class="fallback">body{visibility:hidden}</style>
-<script src="markdeep.min.js"></script>
+<script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
-<script src="util.js"></script>
+<script src="inc/util.js"></script>
 <script>js_init()</script>
