--- a/stock.md.html
+++ b/stock.md.html
@@ -1,6 +1,6 @@
 <meta vim:set syntax=markdown:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="default.css">
+<link rel="stylesheet" href="inc/default.css">
 
 **Stock**
 
@@ -26,5 +26,5 @@
 ![世界の株価指数 (10年)]("http://chart.yahoo.co.jp/?code=998407.O&tm=ay&type=l&log=off&size=m&over=&add=&comp=^DJI,^GDAXI,^HSI")
 
 <style class="fallback">body{visibility:hidden}</style>
-<script src="markdeep.min.js"></script>
+<script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
