--- a/vim.md.html
+++ b/vim.md.html
@@ -1,6 +1,6 @@
 <meta vim:set syntax=markdown:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="default.css">
+<link rel="stylesheet" href="inc/default.css">
 
 <meta name="keywords" content="*memo_vi*">
 <meta name="keywords" content="*memo_vim*">
@@ -693,5 +693,5 @@ $ global -f files  # list functions
 ~~~
 
 <style class="fallback">body{visibility:hidden}</style>
-<script src="markdeep.min.js"></script>
+<script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
