--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title>Memo</title>
 <link rel="icon" href="images/icon.png" type="image/png" />
-<link rel="stylesheet" href="menu.css">
+<link rel="stylesheet" href="inc/menu.css">
 </head>
 
 <body>
