--- a/lang.md.html
+++ b/lang.md.html
@@ -1,6 +1,6 @@
 <meta vim:set syntax=markdown nowrap:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="default.css">
+<link rel="stylesheet" href="inc/default.css">
 <style type="text/css">
 <!--
 body {
@@ -82,6 +82,6 @@ body {
 
 
 <style class="fallback">body{visibility:hidden}</style>
-<script src="markdeep.min.js"></script>
+<script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
 
