--- a/my.md.html
+++ b/my.md.html
@@ -1,6 +1,6 @@
 <meta vim:set syntax=markdown:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="default.css">
+<link rel="stylesheet" href="inc/default.css">
 
 <meta name="keywords" content="*memo_my*">
 **My**
@@ -120,5 +120,5 @@ Command                   | Description
 :MyTabBar                 | Tabularize for vertical bars
 
 <style class="fallback">body{visibility:hidden}</style>
-<script src="markdeep.min.js"></script>
+<script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
