--- a/os.md.html
+++ b/os.md.html
@@ -1,6 +1,6 @@
 <meta vim:set syntax=markdown:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="default.css">
+<link rel="stylesheet" href="inc/default.css">
 
 <meta name="keywords" content="*memo_os*">
 **OS**
@@ -575,5 +575,5 @@ ntp.nict.jp
 time.windows.com
 
 <style class="fallback">body{visibility:hidden}</style>
-<script src="markdeep.min.js"></script>
+<script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
