--- a/soft.md.html
+++ b/soft.md.html
@@ -1,6 +1,6 @@
 <meta vim:set syntax=markdown:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="default.css">
+<link rel="stylesheet" href="inc/default.css">
 
 **Software**
 
@@ -137,5 +137,5 @@ PowerPoint
   - Check Show as an icon
 
 <style class="fallback">body{visibility:hidden}</style>
-<script src="markdeep.min.js"></script>
+<script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
