--- a/blender.md.html
+++ b/blender.md.html
@@ -113,6 +113,7 @@ rzz         | roll
 <meta name="keywords" content="*memo_blender.background*">
 ### 背景の透過
 - Render Properties > Film > Transparent
+- Cycles > World > Ray Visibility > Camera
 
 ## View
 - Denoising
@@ -135,6 +136,9 @@ F12                  | rendering
 ## Quick Favorites
 - menu item 上で右クリック > Add to Quick Favorites
 - qキーでQuick Favorites Menu表示
+
+## Reload Scripts
+- Blender Mark > System > Reload Scripts
 
 ## テクスチャを取り出す
 - File > External Data > Unpack All Into Files
