--- a/vim.md.html
+++ b/vim.md.html
@@ -557,6 +557,7 @@ Plug 'neoclide/coc.nvim', {'branch': 'release'}
 :CocInstall coc-snippets
 :CocInstall coc-lists
 :CocInstall coc-explorer
+:CocUninstall coc-explorer
 :CocUpdate
 
 :CocInfo
