--- a/os_windows.md.html
+++ b/os_windows.md.html
@@ -53,8 +53,16 @@ env            | path                              | description
 - Adobe Acrobat Reader DCをインストール
 - [編集] -> [環境設定] -> [一般] -> [Windows ExplorerでPDFサムネールのプレビューを有効にする]
 
-<meta name="keywords" content="*memo_os.chocolatey*">
-<meta name="keywords" content="*memo_os.choco*">
+<meta name="keywords" content="*memo_os.windows.nodejs*">
+<meta name="keywords" content="*memo_os.windows.npm*">
+## Node.js
+~~~
+npm install --location=global http-server
+http-server -p 8000
+~~~
+
+<meta name="keywords" content="*memo_os.windows.chocolatey*">
+<meta name="keywords" content="*memo_os.windows.choco*">
 ## Chocolatey
 
 ~~~
