--- a/blender.md.html
+++ b/blender.md.html
@@ -16,9 +16,6 @@ L-Click         | select
 Shift + L-Click | multiple select
 L-Drag          | multiple select
 
-## 選択オブジェクトを中心に表示
-- View > Frame Selected
-
 <meta name="keywords" content="*memo_blender.object*">
 # Object Mode
 key              | command
@@ -137,7 +134,10 @@ F12                  | rendering
 - menu item 上で右クリック > Add to Quick Favorites
 - qキーでQuick Favorites Menu表示
 
-## Reload Scripts
+### 選択オブジェクトを中心に表示
+- View > Frame Selected
+
+### Reload Scripts
 - Blender Mark > System > Reload Scripts
 
 ## テクスチャを取り出す
