--- a/os_windows.md.html
+++ b/os_windows.md.html
@@ -55,6 +55,7 @@ env            | path                              | description
 
 <meta name="keywords" content="*memo_os.windows.nodejs*">
 <meta name="keywords" content="*memo_os.windows.npm*">
+<meta name="keywords" content="*memo_os.windows.http-server*">
 ## Node.js
 ~~~
 npm install --location=global http-server
