--- a/vim.md.html
+++ b/vim.md.html
@@ -157,6 +157,38 @@ cfile  | file under the cursor
 <meta name="keywords" content="*memo_vim.keymap*">
 ## keymap
 
+<meta name="keywords" content="*memo_vim.tmap*">
+### terminal mode keymap
+
+| Key | Original                  | Map        | New
+| --- | ------------------------- | ---------- | ---
+| C-A | readline begin            |            |
+| C-B | readline back             |            |
+| C-C | terminal stop             |            |
+| C-D | terminal exit             |            |
+| C-E | readline end              |            |
+| C-F | readline front            |            |
+| C-G |                           |            |
+| C-H | vim move                  |            |
+| C-I | terminal TAB              |            |
+| C-J | vim move                  |            |
+| C-K | vim move                  |            |
+| C-L | vim move                  |            |
+| C-M | terminal CR               |            |
+| C-N | readline history next     |            |
+| C-O |                           |            |
+| C-P | readline history prev     |            |
+| C-Q |                           |            |
+| C-R |                           |            |
+| C-S |                           |            |
+| C-T |                           |            |
+| C-U | readline remove line      |            |
+| C-V |                           |            |
+| C-W |                           |            |
+| C-X |                           |            |
+| C-Y |                           |            |
+| C-Z | terminal suspend          |            |
+
 <meta name="keywords" content="*memo_vim.nmap*">
 ### normal mode keymap
 
