--- a/os_linux.md.html
+++ b/os_linux.md.html
@@ -9,11 +9,15 @@ WSL
 =======================================================
 ## wsl command
 
-| Command       | Description            |
-| ---           | ---                    |
-| wsl --install | install linux          |
-| wsl -l -v     | list installed linux   |
-| wsl -l -o     | list installable linux |
+|       | Command                      | Description            |
+| ---   | ---                          | ---                    |
+| Admin | wsl --update                 |                        |
+|       | wsl --install -d DISTRO_NAME | install linux          |
+|       | wsl -l -v                    | list installed linux   |
+|       | wsl -l -o                    | list installable linux |
+|       | wsl -s DISTRO_NAME           | set default distro     |
+|       | wsl --shutdown               |                        |
+|       | wsl --unregister DISTRO_NAME |                        |
 
 ## file path to access from WSL to Windows
 ~~~
