--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div                         id ="toc">
 <a href="memo.md.html"       id ="toc_item" target="main">Memo</a>
-<a href="init.md.html"       id ="toc_item" target="main">Init</a>
+<a href="setup.md.html"      id ="toc_item" target="main">Setup</a>
 <a href="my.md.html"         id ="toc_item" target="main">My</a>
 |
 <a href="os_windows.md.html" id ="toc_item" target="main">Windows</a>
