--- a/os_linux.md.html
+++ b/os_linux.md.html
@@ -19,6 +19,11 @@ WSL
 |       | wsl --shutdown               |                        |
 |       | wsl --unregister DISTRO_NAME |                        |
 
+## installed directory
+~~~
+AppData/Local/Packages/CanonicalGroupLimited.UbuntuonWindows_*
+~~~
+
 ## file path to access from WSL to Windows
 ~~~
 /mnt/c/Users/username
