--- a/links.md.html
+++ b/links.md.html
@@ -182,18 +182,19 @@ Develop
   | [code](http://miffysora.wikidot.com/graphviz)
 
 ## Windows
-- [chocolatey](https://chocolatey.org/)
-- [PowerToys](https://github.com/microsoft/PowerToys)
-- [Ctrl2cap](https://technet.microsoft.com/ja-jp/sysinternals/bb897578.aspx)
+- [wsltty](https://github.com/mintty/wsltty)
 - [AutoHotkey](https://www.autohotkey.com/)
   | [doc](https://www.autohotkey.com/docs/AutoHotkey.htm)
   | [wiki](http://ahkwiki.net/Top)
+- [Ctrl2cap](https://technet.microsoft.com/ja-jp/sysinternals/bb897578.aspx)
+- [PowerToys](https://github.com/microsoft/PowerToys)
+- [tablacus](https://tablacus.github.io/explorer.html)
+- [faststone](https://www.faststone.org/)
+- [WinDirStat](https://windirstat.net/)
 - [CrystalDiskMark](https://crystalmark.info/ja/software/crystaldiskmark/)
 - [Process Explorer](https://docs.microsoft.com/en-us/sysinternals/downloads/process-explorer)
 - [Dependency Walker](http://www.dependencywalker.com/)
-- [WinDirStat](https://windirstat.net/)
-- [tablacus](https://tablacus.github.io/explorer.html)
-- [faststone](https://www.faststone.org/)
+- [chocolatey](https://chocolatey.org/)
 
 ## Termux
 - [termux](https://termux.com/)
