--- a/os_linux.md.html
+++ b/os_linux.md.html
@@ -78,16 +78,17 @@ Linux
 
 <meta name="keywords" content="*memo_os.linux.apt*">
 ## apt
-| Command         | Description            |
-| ---             | ---                    |
-| apt update      | update database        |
-| apt upgrade     | update packages        |
-| apt autoremove  | remove unused packages |
-| apt list pkg    |                        |
-| apt show pkg    |                        |
-| apt install pkg |                        |
-| apt remove pkg  |                        |
-| apt search pkg  |                        |
+| Command               | Description            |
+| ---                   | ---                    |
+| apt update            | update database        |
+| apt list --upgradable |                        |
+| apt upgrade           | update packages        |
+| apt autoremove        | remove unused packages |
+| apt list pkg          |                        |
+| apt show pkg          |                        |
+| apt install pkg       |                        |
+| apt remove pkg        |                        |
+| apt search pkg        |                        |
 
 <meta name="keywords" content="*memo_os.linux.flatpak*">
 ## flatpak
