--- a/links.md.html
+++ b/links.md.html
@@ -186,9 +186,9 @@ Develop
 - [AutoHotkey](https://www.autohotkey.com/)
   | [doc](https://www.autohotkey.com/docs/AutoHotkey.htm)
   | [wiki](http://ahkwiki.net/Top)
+- [Tablacus](https://tablacus.github.io/explorer.html)
 - [Ctrl2cap](https://technet.microsoft.com/ja-jp/sysinternals/bb897578.aspx)
 - [PowerToys](https://github.com/microsoft/PowerToys)
-- [tablacus](https://tablacus.github.io/explorer.html)
 - [faststone](https://www.faststone.org/)
 - [WinDirStat](https://windirstat.net/)
 - [CrystalDiskMark](https://crystalmark.info/ja/software/crystaldiskmark/)
