--- a/setup.md.html
+++ b/setup.md.html
@@ -33,9 +33,13 @@ cd env
   1. pip install vim
 
 ## Install Windows Apps
+1. [Cica font](https://github.com/tsunesan3/awsome-jp-coding-fonts)
 1. [wsltty](https://github.com/mintty/wsltty)
 1. [AutoHotkey](https://www.autohotkey.com/)
-1. [Cica font](https://github.com/tsunesan3/awsome-jp-coding-fonts)
+1. [Tablacus](https://tablacus.github.io/explorer.html)
+  - アドオン: 分割
+  - アドオン: お気に入りバー (配置: 左, 高さ: 300)
+  - アドオン: サイドバー (配置: 左)
 
 <meta name="keywords" content="*memo_setup.msys2*">
 Setup Msys2
