--- a/setup.md.html
+++ b/setup.md.html
@@ -41,6 +41,12 @@ cd env
   - アドオン: お気に入りバー (配置: 左, 高さ: 300)
   - アドオン: サイドバー (配置: 左)
 
+## Git
+~~~
+[credential]
+  helper = /mnt/c/Program\\ Files/Git/mingw64/bin/git-credential-manager-core.exe
+~~~
+
 <meta name="keywords" content="*memo_setup.msys2*">
 Setup Msys2
 =======================================================
